# Lab2_SP

./: CMakeLists.txt
calculator_project/: Makefile
calculator_project/include/: calculator.h
calculator_project/src/: calculator.cpp  main.cpp
